<resources>
    <string name="app_name" translatable="false">MyToDo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="login">Login</string>
    <string name="my_todo" translatable="false">My ToDo</string>
</resources>
